kubernetes/deployment-tinta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinta-deployment
  labels:
    app: tinta
  namespace: tinta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinta
  template:
    metadata:
      labels:
        app: tinta
    spec:
      containers:
      - name: tinta
        image: nelsi11120/tinta:0.10.0
