kubernetes/service-tinta.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinta-svc
  namespace: tinta
  labels:
    app: tinta
spec:
  selector:
    app: tinta
  ports:
  - protocol: TCP
    port: 7860
    targetPort: 7860
